nerva_libwallet2_api_c/src/main/cpp/nerva_wallet2_api_c.h

//     virtual bool isDeterministic() const = 0;
//     virtual uint64_t blockChainHeight() const = 0;
extern ADDAPI uint64_t NERVA_Wallet_blockChainHeight(void* wallet_ptr);
//     virtual uint64_t approximateBlockChainHeight() const = 0;
extern ADDAPI uint64_t NERVA_Wallet_approximateBlockChainHeight(void* wallet_ptr);
//     virtual uint64_t estimateBlockChainHeight() const = 0;
extern ADDAPI uint64_t NERVA_Wallet_estimateBlockChainHeight(void* wallet_ptr);
//     virtual uint64_t daemonBlockChainHeight() const = 0;
extern ADDAPI uint64_t NERVA_Wallet_daemonBlockChainHeight(void* wallet_ptr);
//     virtual uint64_t daemonBlockChainTargetHeight() const = 0;
extern ADDAPI uint64_t NERVA_Wallet_daemonBlockChainTargetHeight(void* wallet_ptr);
//     virtual bool synchronized() const = 0;
extern ADDAPI bool NERVA_Wallet_synchronized(void* wallet_ptr);
//     static std::string displayAmount(uint64_t amount);
extern ADDAPI const char* NERVA_Wallet_displayAmount(uint64_t amount);
//     static uint64_t amountFromString(const std::string &amount);
extern ADDAPI uint64_t NERVA_Wallet_amountFromString(const char* amount);
//     static uint64_t amountFromDouble(double amount);
extern ADDAPI uint64_t NERVA_Wallet_amountFromDouble(double amount);
//     static std::string genPaymentId();
extern ADDAPI const char* NERVA_Wallet_genPaymentId();
//     static bool paymentIdValid(const std::string &paiment_id);
extern ADDAPI bool NERVA_Wallet_paymentIdValid(const char* paiment_id);
//     static bool addressValid(const std::string &str, NetworkType nettype);
extern ADDAPI bool NERVA_Wallet_addressValid(const char* str, int nettype);
//     static bool addressValid(const std::string &str, bool testnet)          // deprecated
//     {
//         return addressValid(str, testnet ? TESTNET : MAINNET);
//     }
extern ADDAPI bool NERVA_Wallet_keyValid(const char* secret_key_string, const char* address_string, bool isViewKey, int nettype);
extern ADDAPI const char* NERVA_Wallet_keyValid_error(const char* secret_key_string, const char* address_string, bool isViewKey, int nettype);
//     static bool keyValid(const std::string &secret_key_string, const std::string &address_string, bool isViewKey, NetworkType nettype, std::string &error);
//     static bool keyValid(const std::string &secret_key_string, const std::string &address_string, bool isViewKey, bool testnet, std::string &error)     // deprecated
//     {
//         return keyValid(secret_key_string, address_string, isViewKey, testnet ? TESTNET : MAINNET, error);
//     }
//     static std::string paymentIdFromAddress(const std::string &str, NetworkType nettype);
extern ADDAPI const char* NERVA_Wallet_paymentIdFromAddress(const char* strarg, int nettype);
//     static std::string paymentIdFromAddress(const std::string &str, bool testnet)       // deprecated
//     {
//         return paymentIdFromAddress(str, testnet ? TESTNET : MAINNET);
//     }
//     static uint64_t maximumAllowedAmount();
extern ADDAPI uint64_t NERVA_Wallet_maximumAllowedAmount();
//     static void init(const char *argv0, const char *default_log_base_name) { init(argv0, default_log_base_name, "", true); }
//     static void init(const char *argv0, const char *default_log_base_name, const std::string &log_path, bool console);
extern ADDAPI void NERVA_Wallet_init3(void* wallet_ptr, const char* argv0, const char* default_log_base_name, const char* log_path, bool console);
//     static void debug(const std::string &category, const std::string &str);
//     static void info(const std::string &category, const std::string &str);
//     static void warning(const std::string &category, const std::string &str);
//     static void error(const std::string &category, const std::string &str);
//     virtual void startRefresh() = 0;
//     virtual bool getPolyseed(std::string &seed, std::string &passphrase) const = 0;
//     static bool createPolyseed(std::string &seed_words, std::string &err, const std::string &language = "English");
extern ADDAPI void NERVA_Wallet_startRefresh(void* wallet_ptr);
//     virtual void pauseRefresh() = 0;
extern ADDAPI void NERVA_Wallet_pauseRefresh(void* wallet_ptr);
//     virtual bool refresh() = 0;
extern ADDAPI bool NERVA_Wallet_refresh(void* wallet_ptr);
//     virtual void refreshAsync() = 0;
extern ADDAPI void NERVA_Wallet_refreshAsync(void* wallet_ptr);
//     virtual bool rescanBlockchain() = 0;
extern ADDAPI bool NERVA_Wallet_rescanBlockchain(void* wallet_ptr);
//     virtual void rescanBlockchainAsync() = 0;
extern ADDAPI void NERVA_Wallet_rescanBlockchainAsync(void* wallet_ptr);
//     virtual void setAutoRefreshInterval(int millis) = 0;
extern ADDAPI void NERVA_Wallet_setAutoRefreshInterval(void* wallet_ptr, int millis);