impls/monero.dart/lib/src/generated_bindings_nerva.g.dart


  late final _NERVA_Wallet_blockChainHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_blockChainHeight');
  late final _NERVA_Wallet_blockChainHeight = _NERVA_Wallet_blockChainHeightPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_Wallet_approximateBlockChainHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_approximateBlockChainHeight(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_approximateBlockChainHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_approximateBlockChainHeight');
  late final _NERVA_Wallet_approximateBlockChainHeight =
      _NERVA_Wallet_approximateBlockChainHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_Wallet_estimateBlockChainHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_estimateBlockChainHeight(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_estimateBlockChainHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_estimateBlockChainHeight');
  late final _NERVA_Wallet_estimateBlockChainHeight =
      _NERVA_Wallet_estimateBlockChainHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_Wallet_daemonBlockChainHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_daemonBlockChainHeight(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_daemonBlockChainHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_daemonBlockChainHeight');
  late final _NERVA_Wallet_daemonBlockChainHeight =
      _NERVA_Wallet_daemonBlockChainHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int NERVA_Wallet_daemonBlockChainTargetHeight(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_daemonBlockChainTargetHeight(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_daemonBlockChainTargetHeightPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_daemonBlockChainTargetHeight');
  late final _NERVA_Wallet_daemonBlockChainTargetHeight =
      _NERVA_Wallet_daemonBlockChainTargetHeightPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  bool NERVA_Wallet_synchronized(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_synchronized(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_synchronizedPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_synchronized');
  late final _NERVA_Wallet_synchronized = _NERVA_Wallet_synchronizedPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_displayAmount(
    int amount,
  ) {
    return _NERVA_Wallet_displayAmount(
      amount,
    );
  }

  late final _NERVA_Wallet_displayAmountPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Uint64)>>(
          'NERVA_Wallet_displayAmount');
  late final _NERVA_Wallet_displayAmount = _NERVA_Wallet_displayAmountPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  int NERVA_Wallet_amountFromString(
    ffi.Pointer<ffi.Char> amount,
  ) {
    return _NERVA_Wallet_amountFromString(
      amount,
    );
  }

  late final _NERVA_Wallet_amountFromStringPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Char>)>>(
          'NERVA_Wallet_amountFromString');
  late final _NERVA_Wallet_amountFromString = _NERVA_Wallet_amountFromStringPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  int NERVA_Wallet_amountFromDouble(
    double amount,
  ) {
    return _NERVA_Wallet_amountFromDouble(
      amount,
    );
  }

  late final _NERVA_Wallet_amountFromDoublePtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Double)>>(
          'NERVA_Wallet_amountFromDouble');
  late final _NERVA_Wallet_amountFromDouble =
      _NERVA_Wallet_amountFromDoublePtr.asFunction<int Function(double)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_genPaymentId() {
    return _NERVA_Wallet_genPaymentId();
  }

  late final _NERVA_Wallet_genPaymentIdPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
          'NERVA_Wallet_genPaymentId');
  late final _NERVA_Wallet_genPaymentId = _NERVA_Wallet_genPaymentIdPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  bool NERVA_Wallet_paymentIdValid(
    ffi.Pointer<ffi.Char> paiment_id,
  ) {
    return _NERVA_Wallet_paymentIdValid(
      paiment_id,
    );
  }

  late final _NERVA_Wallet_paymentIdValidPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>)>>(
          'NERVA_Wallet_paymentIdValid');
  late final _NERVA_Wallet_paymentIdValid = _NERVA_Wallet_paymentIdValidPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Char>)>();

  bool NERVA_Wallet_addressValid(
    ffi.Pointer<ffi.Char> str,
    int nettype,
  ) {
    return _NERVA_Wallet_addressValid(
      str,
      nettype,
    );
  }

  late final _NERVA_Wallet_addressValidPtr = _lookup<
          ffi
          .NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Int)>>(
      'NERVA_Wallet_addressValid');
  late final _NERVA_Wallet_addressValid = _NERVA_Wallet_addressValidPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Char>, int)>();

  bool NERVA_Wallet_keyValid(
    ffi.Pointer<ffi.Char> secret_key_string,
    ffi.Pointer<ffi.Char> address_string,
    bool isViewKey,
    int nettype,
  ) {
    return _NERVA_Wallet_keyValid(
      secret_key_string,
      address_string,
      isViewKey,
      nettype,
    );
  }

  late final _NERVA_Wallet_keyValidPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Bool, ffi.Int)>>('NERVA_Wallet_keyValid');
  late final _NERVA_Wallet_keyValid = _NERVA_Wallet_keyValidPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, bool, int)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_keyValid_error(
    ffi.Pointer<ffi.Char> secret_key_string,
    ffi.Pointer<ffi.Char> address_string,
    bool isViewKey,
    int nettype,
  ) {
    return _NERVA_Wallet_keyValid_error(
      secret_key_string,
      address_string,
      isViewKey,
      nettype,
    );
  }

  late final _NERVA_Wallet_keyValid_errorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Bool,
              ffi.Int)>>('NERVA_Wallet_keyValid_error');
  late final _NERVA_Wallet_keyValid_error =
      _NERVA_Wallet_keyValid_errorPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, bool, int)>();

  ffi.Pointer<ffi.Char> NERVA_Wallet_paymentIdFromAddress(
    ffi.Pointer<ffi.Char> strarg,
    int nettype,
  ) {
    return _NERVA_Wallet_paymentIdFromAddress(
      strarg,
      nettype,
    );
  }

  late final _NERVA_Wallet_paymentIdFromAddressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>,
              ffi.Int)>>('NERVA_Wallet_paymentIdFromAddress');
  late final _NERVA_Wallet_paymentIdFromAddress =
      _NERVA_Wallet_paymentIdFromAddressPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, int)>();

  int NERVA_Wallet_maximumAllowedAmount() {
    return _NERVA_Wallet_maximumAllowedAmount();
  }

  late final _NERVA_Wallet_maximumAllowedAmountPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function()>>(
          'NERVA_Wallet_maximumAllowedAmount');
  late final _NERVA_Wallet_maximumAllowedAmount =
      _NERVA_Wallet_maximumAllowedAmountPtr.asFunction<int Function()>();

  void NERVA_Wallet_init3(
    ffi.Pointer<ffi.Void> wallet_ptr,
    ffi.Pointer<ffi.Char> argv0,
    ffi.Pointer<ffi.Char> default_log_base_name,
    ffi.Pointer<ffi.Char> log_path,
    bool console,
  ) {
    return _NERVA_Wallet_init3(
      wallet_ptr,
      argv0,
      default_log_base_name,
      log_path,
      console,
    );
  }

  late final _NERVA_Wallet_init3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Bool)>>('NERVA_Wallet_init3');
  late final _NERVA_Wallet_init3 = _NERVA_Wallet_init3Ptr.asFunction<
      void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, bool)>();

  void NERVA_Wallet_startRefresh(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_startRefresh(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_startRefreshPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_startRefresh');
  late final _NERVA_Wallet_startRefresh = _NERVA_Wallet_startRefreshPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  void NERVA_Wallet_pauseRefresh(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_pauseRefresh(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_pauseRefreshPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_pauseRefresh');
  late final _NERVA_Wallet_pauseRefresh = _NERVA_Wallet_pauseRefreshPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  bool NERVA_Wallet_refresh(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_refresh(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_refreshPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_refresh');
  late final _NERVA_Wallet_refresh = _NERVA_Wallet_refreshPtr.asFunction<
      bool Function(ffi.Pointer<ffi.Void>)>();

  void NERVA_Wallet_refreshAsync(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_refreshAsync(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_refreshAsyncPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_refreshAsync');
  late final _NERVA_Wallet_refreshAsync = _NERVA_Wallet_refreshAsyncPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  bool NERVA_Wallet_rescanBlockchain(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_rescanBlockchain(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_rescanBlockchainPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_rescanBlockchain');
  late final _NERVA_Wallet_rescanBlockchain = _NERVA_Wallet_rescanBlockchainPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>)>();

  void NERVA_Wallet_rescanBlockchainAsync(
    ffi.Pointer<ffi.Void> wallet_ptr,
  ) {
    return _NERVA_Wallet_rescanBlockchainAsync(
      wallet_ptr,
    );
  }

  late final _NERVA_Wallet_rescanBlockchainAsyncPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'NERVA_Wallet_rescanBlockchainAsync');
  late final _NERVA_Wallet_rescanBlockchainAsync =
      _NERVA_Wallet_rescanBlockchainAsyncPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>)>();

  void NERVA_Wallet_setAutoRefreshInterval(
    ffi.Pointer<ffi.Void> wallet_ptr,
    int millis,
  ) {
    return _NERVA_Wallet_setAutoRefreshInterval(
      wallet_ptr,
      millis,
    );
  }
